[gd_scene load_steps=3 format=3 uid="uid://676am2pgayvq"]

[ext_resource type="Script" uid="uid://ggc7n1cgqvfm" path="res://template_project/Scenes/HUD/HUD.gd" id="1_jo1ms"]
[ext_resource type="FontFile" uid="uid://can3t26c00ch4" path="res://template_project/fonts/Xolonium-Regular.ttf" id="1_sd512"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_jo1ms")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 24.0
offset_top = 16.0
offset_right = 206.0
offset_bottom = 94.0
scale = Vector2(0.91037446, 0.91037446)
theme_override_fonts/font = ExtResource("1_sd512")
theme_override_font_sizes/font_size = 64
text = "0"
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -120.0
offset_right = 328.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6183898, 0.6183898)
theme_override_fonts/font = ExtResource("1_sd512")
theme_override_font_sizes/font_size = 64
text = "Dodge the Creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = 56.0
offset_right = 96.0
offset_bottom = 142.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_sd512")
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
